# wolfBoot

./: .config-bad  .editorconfig  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.sample  INSTALL.md  LICENSE  Makefile  Makefile-bad  Makefile-good  Makefile-good.orig  Makefile.am  NOTICE  README.md  arch.mk  bootloader.lss  cloc_lang_def.txt  commit-tests.sh  config2presets.py  configure.ac  coverage.sh  include.am  my_test.bat  my_test.sh  options.mk  pre-commit.sh  wolfBoot.code-workspace  wolfbuild.sh  x86_fsp.mk
.github/workflows/: build-keytools-windows.yml  build-workflow.yml  emu-test-stm32h5.yml  footprint.yml  suit.yml  test-build-aarch64.yml  test-build-cmake-dot-config.yml  test-build-cmake-mac.yml  test-build-cmake-presets.yml  test-build-cmake-script.yml  test-build-cmake-windows.yml  test-build-cmake.yml  test-build-kontron-vx3060-s2.yml  test-build-lms.yml  test-build-mcux-sdk-manifests.yml  test-build-mcux-sdk.yml  test-build-msdk.yml  test-build-pic32cx.yml  test-build-pico-sdk.yml  test-build-powerpc.yml  test-build-psoc6.yml  test-build-riscv.yml  test-build-sim-tpm.yml  test-build.yml  (+35 more)
IDE/: include.am
IDE/VisualStudio/wolfboot/: CMakeLists.txt  CMakePresets.json  wolfboot.cpp  wolfboot.h
IDE/pico-sdk/rp2350/test-app/: CMakeLists.txt  build-signed-app.sh  flash_app.jlink  runtime.c
IDE/pico-sdk/rp2350/wolfboot/: .gdbinit  CMakeLists.txt  build-wolfboot.sh  erase.jlink  flash_wolfboot.jlink
cmake/: CMakeUserPresets.json.sample  README.md  config_defaults.cmake  cube_ide_config.cmake  current_user.cmake  functions.cmake  load_dot_config.cmake  stm32_hal_download.cmake  toolchain_aarch64-none-elf.cmake  toolchain_arm-none-eabi.cmake  utils.cmake  visualgdb_config.cmake  vs2022_config.cmake  wolfboot.cmake  write_size.cmake
config/: Makefile
docs/: API.md  CMake.md  DICE.md  HAL.md  Loader.md  MCXN947-DICE.md  PQ.md  PolarFire_SoC_DDR_Training.md  PubkeySealing.md  README.md  Renesas.md  STM32-TZ.md  STM32.md  SUIT.md  Signing.md  TPM.md  Targets.md  Windows.md  ata_security.md  azure_keyvault.md  compile.md  encrypted_partitions.md  firmware_image.md  firmware_update.md  firmware_upgrade.md  flash-OTP.md  flash_partitions.md  fwTPM.md  hooks.md  keystore.md  lib.md  measured_boot.md  release-stm32n6.md  remote_flash.md  wolfHAL.md  wolfHSM.md  wolfssl-config.md
hal/: armv8m_tz.h  aurix_tc3xx.c  aurix_tc3xx.ld  aurix_tc3xx_hsm.ld  cc26x2.c  cc26x2.ld  clang-discard.ld  filesystem.c  gd32vf103.c  gd32vf103.ld  hal.c  hifive1.c  hifive1.ld  imx_rt.c  imx_rt.h  imx_rt.ld  imx_rt1050_nor.h  imx_rt1060_nor.h  imx_rt1064_nor.h  imx_rt_hab.ld  imx_rt_nor.h  kinetis.c  kinetis.ld  kinetis_kl26.c  kinetis_kl26.ld  kontron_vx3060_s2.c  kontron_vx3060_s2_loader.c  library.c  library_fs.c  lpc.c  lpc.ld  lpc55s69-ns.ld  lpc55s69.c  lpc55s69.ld  max32666.c  max32666.h  max32666.ld  mcxa.c  mcxn-ns.ld  mcxn.c  (+185 more)
include/: bootutil.h  ddr_cadence.h  delta.h  disk.h  elf.h  encrypt.h  fdt.h  flash.h  flash_map.h  gpt.h  gzip.h  hal.h  hal_fpga.h  hal_otp.h  hooks.h  image.h  keystore.h  loader.h  multiboot.h  otp_keystore.h  pci.h  printf.h  sdhci.h  spi_drv.h  spi_flash.h  stage1.h  stage2_params.h  suit.h  target.h  target.h.in  tpm.h  uart_drv.h  uart_flash.h  user_settings.h  version.h
lib/: CMakeLists.txt  README.md
lib/bootutil/include/bootutil/: image.h  sha256.h  sign_key.h
lib/bootutil/src/: bootutil_misc.c  bootutil_priv.h  flash_map_backend.h  image_validate.c  loader.c
m4/: wolfpkcs11_coverage.m4
src/: .run.c.swp  arm_tee_psa_ipc.c  arm_tee_psa_veneer.c  boot_aarch64.c  boot_aarch64_start.S  boot_aarch64_translation.S  boot_aarch64_vectors.S  boot_arm.c  boot_arm32.c  boot_arm32_start.S  boot_ppc.c  boot_ppc_mp.S  boot_ppc_start.S  boot_renesas.c  boot_renesas_start.S  boot_riscv.c  boot_riscv64.c  boot_riscv64_start.S  boot_riscv_start.S  boot_x86_64.c  boot_x86_fsp.c  boot_x86_fsp_payload.c  boot_x86_fsp_start.S  clang_sections.S  crypto.c  ddr_cadence.c  delta.c  disk.c  elf.c  fdt.c  flash_map_extended.c  flash_otp_keystore.c  ftpm_callable.c  fwtpm_callable.c  gpt.c  gzip.c  image.c  include.am  internal.c  keys.c  (+43 more)
stage1/: Makefile  loader_stage1.c  x86_fsp.mk
test-app/: AARCH64-ls1028a.ld  AARCH64.ld  ARM-kinetis_kl26.ld  ARM-lpc55s69-ns.ld  ARM-lpc55s69.ld  ARM-max32666.ld  ARM-mcxa.ld  ARM-mcxn-ns.ld  ARM-mcxn.ld  ARM-mcxw-ns.ld  ARM-mcxw.ld  ARM-nrf5340-ns.ld  ARM-nrf5340_net.ld  ARM-nrf54l-ns.ld  ARM-nxp_lpc54s0xx.ld  ARM-psoc6.ld  ARM-r5be.ld  ARM-s32k1xx.ld  ARM-sama5d3.ld  ARM-stm32c0.ld  ARM-stm32c5.ld  ARM-stm32f7.ld  ARM-stm32h5-ns.ld  ARM-stm32h5.ld  ARM-stm32h7.ld  ARM-stm32l5-ns.ld  ARM-stm32l5.ld  ARM-stm32n6-ns.ld  ARM-stm32n6.ld  ARM-stm32u3.ld  ARM-stm32u5-ns.ld  ARM-stm32u5.ld  ARM-va416x0.ld  ARM-zynq7000.ld  ARM.ld  CMakeLists.txt  Makefile  PPC.ld  RENESAS_RX.ld  RISCV.ld  (+114 more)
test-app/emu-test-apps/: Makefile  test.sh
test-app/emu-test-apps/common/: emu_app.h  emu_hal.c  emu_ivt.c  emu_startup.c  emu_syscalls.c  emu_update.c
test-app/emu-test-apps/mcxw71/: Makefile  target.h  target.ld  target.ld.in  uart.c
test-app/emu-test-apps/nrf5340/: Makefile  target.ld  target.ld.in  uart.c
test-app/emu-test-apps/stm32h563/: Makefile  target.ld  target.ld.in  target_v8.ld  tmp_server  uart.c
test-app/emu-test-apps/stm32l552/: Makefile  target.h  target.ld  target.ld.in  uart.c
test-app/emu-test-apps/stm32u585/: Makefile  target.h  target.ld  target.ld.in  uart.c
test-app/wcs/: ftpm_stub.c  fwtpm_stub.c  pkcs11.mk  pkcs11_stub.c  pkcs11_test_ecc.c  user_settings.h  wolfcrypt_secure.c  wolfhsm_stub.c  wolfhsm_test.c  wolfhsm_test.h
tests/: README.md  include.am  pkcs11mtt.c  pkcs11str.c  pkcs11test.c  suit_cross_check.py  suit_host_test.sh  suit_test.c  testdata.h  unit.h
tools/: config.mk  test-delta.mk  test-enc.mk  test-renode.mk  test.mk  visualgdb.mk  wolfboot-rpi-devicetree.diff
wolfpkcs11/: include.am  internal.h  options.h.in  pkcs11.h  store.h  version.h  version.h.in  visibility.h
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml
(+902 files in other folders)
